--- a/rancher/cloud9/docker-compose.yml
+++ b/rancher/cloud9/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     - cloud9-workspace:/workspace
     - /etc/pki/ca-trust/source/anchors:/usr/local/share/ca-certificates:ro
     tty: true
-    command: --listen 0.0.0.0 --port 8080 -w /workspace --collab --auth "${username}:${password}"
+    command: 
+    - --listen 0.0.0.0 --port 8080 -w /workspace --collab --auth "${username}:${password}"
     labels:
       io.rancher.container.pull_image: always
       io.rancher.sidekicks: docker
