--- a/rancher/cloud9/rancher-compose.yml
+++ b/rancher/cloud9/rancher-compose.yml
@@ -3,6 +3,22 @@ services:
   cloud9:
     scale: 1
     start_on_create: true
+    health_check:
+      port: 8080
+      interval: 30000
+      unhealthy_threshold: 3
+      healthy_threshold: 3
+      response_timeout: 5000
+      strategy: recreate
+      request_line: ''
   docker:
     scale: 1
     start_on_create: true
+    health_check:
+      port: 2375
+      interval: 30000
+      unhealthy_threshold: 3
+      healthy_threshold: 3
+      response_timeout: 5000
+      strategy: recreate
+      request_line: ''
