--- a/rancher/cloud9/docker-compose.yml
+++ b/rancher/cloud9/docker-compose.yml
@@ -37,6 +37,6 @@ services:
     - /etc/pki/ca-trust/source/anchors:/usr/local/share/ca-certificates:ro
     tty: true
     command:
-    - update-ca-certificates && dockerd-entrypoint.sh --storage-driver=overlay2
+    - update-ca-certificates && dockerd-entrypoint.sh --storage-driver=overlay2  --storage-opt overlay2.override_kernel_check=true
     labels:
       io.rancher.container.pull_image: always
