--- a/rancher/cloud9/docker-compose.yml
+++ b/rancher/cloud9/docker-compose.yml
@@ -10,6 +10,14 @@ services:
       - http_proxy=${proxy}
       - https_proxy=${proxy}
       - no_proxy=localhost, 127.0.0.1, docker, rancher-metadata, .hm.dm.ad
+      - ARM_SUBSCRIPTION_ID=${arm_subscription_id}
+      - ARM_CLIENT_ID=${arm_client_id}
+      - ARM_CLIENT_SECRET=${arm_client_secret}
+      - ARM_TENANT_ID=${arm_tenant_id}
+      - ARM_ACCESS_KEY=${arm_access_key}
+      - RANCHER_ACCESS_KEY=${rancher_access_key}
+      - RANCHER_SECRET_KEY=${rancher_secret_key}
+      - CONSUL_HTTP_TOKEN=${consul_http_token}
     stdin_open: true
     volumes:
     - cloud9-workspace:/workspace
