--- a/rancher/cloud9/docker-compose.yml
+++ b/rancher/cloud9/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     - /bin/sh
     - -c
     stdin_open: true
-    network_mode: container:cloud9
+    network_mode: host
     volumes:
     - cloud9-workspace:/workspace
     - /etc/pki/ca-trust/source/anchors:/usr/local/share/ca-certificates:ro
